--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,10 @@
       </div>
     </div>
     <div class="mb-2">
-      <i class="fas fa-plus-circle"></i> <span>Add review</span>
+    <%= link_to review_path, class:'orange-link' do %>
+      <i class="fas fa-plus-circle"></i>
+      <span>Add review</span>
+    <% end %>
     </div>
     <hr>
     <div class="py-2 reviewContent col-10 mb-2">
