--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,6 +2,14 @@
   width: 20px;
   border-radius: 50%;
 }
+
+.avatar-sm {
+  width: 40px;
+  height: 40px;
+  background-position: cover;
+  border-radius: 50%;
+  object-fit: cover;
+}
 .avatar-large {
   width: 56px;
   border-radius: 50%;
