--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,3 +1,18 @@
 .chatroom-name {
   text-align: center;
 }
+
+.chats-container {
+  display: flex;
+  gap: 1em;
+  padding: 1em;
+  align-items: center;
+  border-radius: 1.6em;
+  .chat-content-message {
+    font-weight: lighter;
+  }
+}
+
+.chats-container:hover {
+  background-color: rgba(255, 166, 0, 0.501);
+}
