chatroom show current_user chats and navbar link to My Chats inserted

--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container chat-index">
-  <% @chatrooms.each do |chatroom| %>
+
+  <% current_user.chatrooms.each do |chatroom| %>
   <%= link_to chatroom_path(chatroom) do %>
     <div class="chats-container">
       <div class="chat-content-image">
