--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,45 @@
-
-<div class="container">
+<div class="container container-center">
   <div class="row justify-content-center">
-    <div class="col-6">
-      <h2>Sign up</h2>
-
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div class="col-12">
+      <div class="devise-text-content">
+        <div class="devise-text">
+          <h1>Hey stranger!</h1>
+          <p>Join our community</p>
+        </div>
+      </div>
+      <div class="form-container" >
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field mb-3">
+          <% f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'email', class: 'form-control mb-3' %>
         </div>
 
-        <div class="field">
-          <%= f.label :password %>
+        <div class="field mb-1">
+          <% f.label :password %>
+          <%= f.password_field :password, autocomplete: "new-password",
+                                          placeholder: 'Password',
+                                          class:'form-control'  %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <span><small>(<%= @minimum_password_length %> characters minimum)</small></span>
+          <% end %>
         </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <div class="field mb-3">
+          <% f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password",
+                                                        placeholder: 'Password confirmation',
+                                                        class:'form-control'  %>
         </div>
 
-        <div class="actions">
-          <%= f.submit "Sign up" %>
+        <div class="actions mb-3">
+          <%= f.submit "Sign up", class: 'w-100 btn-orange mb-3' %>
         </div>
       <% end %>
 
       <%= render "devise/shared/links" %>
+        </div>
+      </div>
     </div>
-  </div>
 </div>
