--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -26,6 +26,7 @@
   padding: .8em;
   position: fixed;
   bottom: 0;
+  right: 0;
   background-color: rgba(192, 192, 192, 0.811);
   border-radius: 1em 1em 0 0;
   width: 100%;
