--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
-<nav class="container nav-absolute d-flex align-items-center justify-content-between">
+<nav class="container nav-absolute d-flex align-items-center justify-content-between" style="background-color: white;
+  opacity: 0.9;">
   <%= link_to root_path do %>
   <%= image_tag "logo.png", alt: 'logo' %>
   <% end %>
