--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -77,3 +77,17 @@ $br-radius: 2em;
   margin-bottom: 8px;
   text-transform: uppercase;
 }
+
+.card  {
+  position: relative;
+
+}
+
+.form-group-container{
+  width: 100%;
+  position: absolute;
+  background-color: rgba(44, 44, 44, 0.496);
+  height: inherit;
+  border-radius: inherit;
+  z-index: 999;
+}
