--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,7 +56,7 @@
     <% @reviews.each do |review| %>
       <div class="py-2 reviewContent col-10 mb-2">
         <div>
-          <strong><%= @review.user.username %></strong>
+          <strong><%= review.user.username %></strong>
           <br>
           <div><%=  %> is really nice. We spent really great time at the concert ! Meet you soon ! “</div>
         </div>
