--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,24 +27,21 @@
         <% end %>
       </div>
       <strong class="my-3">Reviews</strong>
-      <div class='reviews rounded d-flex justify-content-between align-items-center px-3 mb-4 col-12'>
-        <div>
-          <div><strong>4.5/5</strong></div>
-          <p>Based on 120 reviews</p>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star-half"></i>
+      <%= "No reviews" if @reviews.count == 0 %>
+      <% @reviews.each do |review| %>
+        <div class="py-2 reviewContent col-10 mb-2">
+          <ul>
+            <div>
+              <strong><%= review.user.username %></strong>
+              <br>
+              <div>
+              <%= review.content %>
+              </div>
+            </div>
+          </ul>
         </div>
-        <div>
-          <div class="d-flex justify-content-between align-items-center flexgap"><span>5 stars </span><span class="bar"></span></div>
-          <div class="d-flex justify-content-between align-items-center flexgap"><span>4 stars </span><span class="bar"></span></div>
-          <div class="d-flex justify-content-between align-items-center flexgap"><span>3 stars </span><span class="bar"></span></div>
-          <div class="d-flex justify-content-between align-items-center flexgap"><span>2 stars </span><span class="bar"></span></div>
-          <div class="d-flex justify-content-between align-items-center flexgap"><span>1 stars </span><span class="bar"></span></div>
-        </div>
-      </div>
+      <% end %>
+
     </div>
     <div class="mb-2">
     <%= link_to review_path, class:'orange-link' do %>
@@ -53,14 +50,5 @@
     <% end %>
     </div>
     <hr>
-    <% @reviews.each do |review| %>
-      <div class="py-2 reviewContent col-10 mb-2">
-        <div>
-          <strong><%= @review.user.username %></strong>
-          <br>
-          <div><%=  %> is really nice. We spent really great time at the concert ! Meet you soon ! “</div>
-        </div>
-      </div>
-    <% end %>
   </div>
 </div>
