--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10 d-flex justify-content-between flex-column align-items-center bio">
-      <%= image_tag "#{@userphto}", class: "avatar text-center  dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false%>
+      <%= image_tag "#{@user.photo}", class: "avatar-large text-center  dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false%>
       <h1 class="text-center"><%= @user.username %></h1>
       <p class="text-center"> <%= @user.bio %></p>
     </div>
@@ -43,12 +43,14 @@
       <% end %>
 
     </div>
-    <div class="mb-2">
-    <%= link_to review_path, class:'orange-link' do %>
-      <i class="fas fa-plus-circle"></i>
-      <span>Add review</span>
+    <% if current_user != @user %>
+      <div class="mb-2">
+        <%= link_to review_path, class:'orange-link' do %>
+          <i class="fas fa-plus-circle"></i>
+          <span>Add review</span>
+        <% end %>
+      </div>
     <% end %>
-    </div>
     <hr>
   </div>
 </div>
