--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,19 +11,25 @@
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="field mb-3">
-          <% f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'email', class: 'form-control mb-3' %>
+        <div class="field mb-1">
+          <% f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: 'email', placeholder: 'email', class: 'form-control' %>
         </div>
 
         <div class="field mb-1">
-          <% f.label :password %>
+          <% f.label :username %>
+          <%= f.text_field :username, placeholder: 'username', class: 'form-control' %><br>
+        </div>
+
+        <div class="field mb-1">
+        <% if @minimum_password_length %>
+          <span><small>(<%= @minimum_password_length %> characters minimum)</small></span>
+          <% end %>
+          <% f.label :password %><br>
           <%= f.password_field :password, autocomplete: "new-password",
                                           placeholder: 'Password',
                                           class:'form-control'  %>
-          <% if @minimum_password_length %>
-          <span><small>(<%= @minimum_password_length %> characters minimum)</small></span>
-          <% end %>
+
         </div>
 
         <div class="field mb-3">
