--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,15 @@
         <div><strong><div><%= @concerts.count %></div></strong><div>concerts</div></div>
     </div>
     <div class="text-center my-2 col-8 d-flex justify-content-between align-items-center btnFlex">
-      <button class="btn-orange">Chat</button>
-      <button class="btn-orange">Follow</button>
+      <% if current_user == @user %>
+        <%# < class="btn-orange"><%= link_to "My Chats", chatrooms_path</button> %>
+        <%= link_to "My Chats", chatrooms_path, class: 'btn-orange' %>
+        <%= link_to "Edit", edit_user_registration_path, class: 'btn-orange' %>
+
+      <% else %>
+        <%= link_to 'Chat', user_path(@user), class: 'btn-orange'%>
+        <%= link_to "Add Review", review_path, class: 'btn-orange' %>
+      <% end %>
     </div>
     <div class="d-flex justify-content-between flex-column mt-4 col-12">
       <strong class="my-3">Upcoming concerts</strong>
@@ -41,16 +48,7 @@
           </ul>
         </div>
       <% end %>
-
     </div>
-    <% if current_user != @user %>
-      <div class="mb-2">
-        <%= link_to review_path, class:'orange-link' do %>
-          <i class="fas fa-plus-circle"></i>
-          <span>Add review</span>
-        <% end %>
-      </div>
-    <% end %>
     <hr>
   </div>
 </div>
