--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -14,3 +14,11 @@
     background-color: #FF7E06;
   }
 }
+
+#logo {
+  text-decoration: none;
+  color: #FF7E06;
+  margin: 0;
+  font-weight: bold;
+  font-size: 1.3em;
+}
