--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="container nav-absolute d-flex align-items-center justify-content-between" style="background-color: white;
   opacity: 0.9;">
   <%= link_to root_path do %>
-  <%= image_tag "logo.png", alt: 'logo' %>
+   <h1 id='logo'>Beam</h1>
   <% end %>
   <div class="dropdown">
     <i class="fas fa-bars" data-bs-toggle="dropdown" aria-expanded="false"></i>
