--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,10 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap');
-// @import url("https://use.fontawesome.com/releases/v5.0.10/css/all.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&family=Sora:wght@200;400;700&display=swap');// @import url("https://use.fontawesome.com/releases/v5.0.10/css/all.css");
 
 // Define fonts for body and headers
 $body-font: 'Poppins', sans-serif;
-$headers-font: 'Poppins', sans-serif;
+$headers-font: 'Sora', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
