--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -99,7 +99,11 @@
     </div>
   </div>
 </div>
-
+<div style="width: 100%; height: 200px;"
+          data-controller="mapbox"
+          data-mapbox-markers-value="<%= @markers.to_json %>"
+          data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
 <div class="footer-map">
   <div class="footer_content">
     <p>SOME TEXT</p>
