--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -13,7 +13,8 @@
           <%  @attendees.each do |attendee| %>
             <div class="attendee-card">
               <div class="card-content">
-                <%= image_tag attendee.user.photo, class: 'avatar-sm'  %>
+                <% photo = attendee.user.photo ? attendee.user.photo : "https://thumbs.dreamstime.com/b/default-avatar-profile-trendy-style-social-media-user-icon-187599373.jpg" %>
+                <%= image_tag photo, class: 'avatar-sm'  %>
                 <%= link_to user_path(attendee.user.id) do %>
                   <p class="card-fullname"><%= attendee.user.username %></p>
                 <% end %>
