--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 
       <% else %>
         <%= link_to 'Chat', user_path(@user), class: 'btn-orange'%>
-        <%= link_to "Add Review", review_path, class: 'btn-orange' %>
+        <%= link_to "Add Review", new_user_review_path(params[:id]), class: 'btn-orange' %>
       <% end %>
     </div>
     <div class="d-flex justify-content-between flex-column mt-4 col-12">
