--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,6 +45,7 @@
 <div class="footer-map">
     <div class="footer_content">
     <p>SOME TEXT</p>
-    <button class="btn-orange">MAP</button>
+    <%= link_to "MAP", map_path , class:"btn-orange"%>
+    <%# <button class="btn-orange">MAP</button> %>
     </div>
 </div>
