--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -6,3 +6,11 @@
   text-align: center;
   font-family: "Open Sans", sans-serif;
 }
+.mapboxgl-popup{
+  transform: unset !important;
+  position: fixed;
+  bottom: 0;
+  left: 20px;
+  right: 20px;
+  top: unset !important;
+}
